--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,81 +1,46 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+
+import SunriseImage from "../images/sunrise.png";
+import SunsetImage from "../images/sunset.png";
+import CruiserImage from "../images/cruiser.png";
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
+<Layout title="AntiFragile Matter Inc.">
+	<main class="font-source flex flex-col">
+		<section class="relative min-h-screen">
+			<nav class="w-full z-50 absolute top-2 left-12">
+				<a href="https://twitter.com/antifragile_eth">
+					<i class="fa-brands fa-twitter text-3xl hover:text-blue-400"></i>
+				</a>
+			</nav>
+			<div class="absolute inset-0 w-full h-full z-0">
+				<img src={SunriseImage} alt="Sunrise over mars" class="w-full h-full object-cover object-center" />
+			</div>
+			<div class="w-4/5 sm:w-[45%] z-50 flex flex-col space-y-4 absolute top-1/2 left-1/2 -translate-x-1/2 sm:-translate-x-[90%] -translate-y-1/2 text-white bg-[#1f0021] p-6 border-4 border-black rounded-2xl ">
+				<h1 class="text-4xl tracking-wider text-[#F9DE64] font-black" >Make your smart contracts safe<br/>Build <span class="underline underline-offset-8">Anti-Fragile</span></h1>
+				<p class="tracking-wide font-light text-md text-white/50">Powered by <a href="https://www.smth.ai/" class="text-transparent bg-clip-text bg-gradient-to-r from-[#61A0AF] to-[#EB9486] hover:underline hover:underline-offset-4 hover:text-white">Smth AI</a></p>
+				<p class="tracking-wide font-light text-lg">A public good tool for detecting and fixing security vulnerabilities in Ethereum smart contracts using AI Agents</p>
+			</div>
+		</section>
+		<section class="relative min-h-screen">
+			<div class="absolute inset-0 w-full h-full z-0">
+				<img src={CruiserImage} alt="Cruiser driving across mars" class="w-full h-full object-cover object-center" />
+			</div>
+			<div class="w-4/5 sm:w-[45%] z-50 flex flex-col space-y-4 absolute top-1/2 left-1/2 -translate-x-1/2 sm:-translate-x-[10%] -translate-y-1/2 text-white bg-[#1f0021] p-6 border-4 border-black rounded-2xl ">
+				<h1 class="text-4xl tracking-wider text-[#F9DE64] font-black" >Make your smart contracts safe<br/>Build <span class="underline underline-offset-8">Anti-Fragile</span></h1>
+				<p class="tracking-wide font-light text-lg">A public good tool for detecting and fixing security vulnerabilities in Ethereum smart contracts using AI Agents</p>
+			</div>
+		</section>
+		<section class="relative min-h-screen">
+			<div class="absolute inset-0 w-full h-full z-0">
+				<img src={SunsetImage} alt="Cruiser driving across mars" class="w-full h-full object-cover object-center" />
+			</div>
+			<div class="w-4/5 sm:w-[33%] z-50 flex flex-col space-y-4 absolute top-1/2 left-1/2 -translate-x-1/2 sm:-translate-x-[53%] -translate-y-1/2 text-white bg-[#1f0021] p-6 border-4 border-black rounded-2xl ">
+				<h1 class="text-4xl tracking-wider text-[#F9DE64] font-black" >Make your smart contracts safe<br/>Build <span class="underline underline-offset-8">Anti-Fragile</span></h1>
+				<p class="tracking-wide font-light text-md text-white/50">Powered by <a href="https://www.smth.ai/" class="text-transparent bg-clip-text bg-gradient-to-r from-[#61A0AF] to-[#EB9486] hover:underline hover:underline-offset-4 hover:text-white">Smth AI</a></p>
+				<p class="tracking-wide font-light text-lg">A public good tool for detecting and fixing security vulnerabilities in Ethereum smart contracts using AI Agents</p>
+			</div>
+		</section>
 	</main>
 </Layout>
-
-<style>
-	main {
-		margin: auto;
-		padding: 1.5rem;
-		max-width: 60ch;
-	}
-	h1 {
-		font-size: 3rem;
-		font-weight: 800;
-		margin: 0;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		line-height: 1.6;
-		margin: 1rem 0;
-		border: 1px solid rgba(var(--accent), 25%);
-		background-color: white;
-		padding: 1rem;
-		border-radius: 0.4rem;
-	}
-	.instructions code {
-		font-size: 0.875em;
-		font-weight: bold;
-		background: rgba(var(--accent), 12%);
-		color: rgb(var(--accent));
-		border-radius: 4px;
-		padding: 0.3em 0.45em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 0;
-	}
-</style>
